--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,104 @@
 body {
-  margin: 0;
+    background-image: url('drone_image.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-nav {
-  background-color: #f8f8f8;
-  display: flex;
+.container {
+    margin-top: 20px;
+    text-align: center;
 }
 
-.drone {  
-  display: flex;
-  width: 200px;
-  height: 300px;
-  font-size: 20px;
-  padding-left: 20px;
-  margin: 20px;
-  background-color:rgb(0, 0, 0);
-  color: #e0e0e0;
-  flex-direction: column;
+button {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 10px;
 }
 
-.help_object {
-  display: flex;
-  flex-wrap: nowrap;
+#droneList {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 20px;
 }
 
-ul {
-  padding: 30px 0;
-  margin: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
+.drone-item {
+    background-color: #bbcfdc96;
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(205, 20, 20, 0.1);
+    margin: 10px;
+    width: 300px;
+    padding: 10px;
 }
 
-.content {
-  display: flex;
+.modal {
+    position: fixed;
+    left: 40%;
+    top: 25%;
 }
 
-li {
-  display: flex;
-  flex-wrap: wrap;
+.modal-content {
+    background-color: rgba(69, 148, 200, 0.87);
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    position: relative;
 }
 
-.nav__button {
-  font-size: 18px;
-  border-radius: 8px;
-  border-color: black;
-  padding: 11px;
-  background-color: #e0e0e0;
-  margin: 0 12px;
+label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
 }
 
-#search {
-  display: flex;
-  margin-right: 50px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+input, select {
+    width: 100%;
+    padding: 5px;
+    margin-top: 5px;
+    background-color: rgba(255, 255, 255, 0.635);
+    border: 1px solid rgba(0, 0, 0, 0.712);
+    border-radius: 10px;
+}
+
+#button_cancel {
+    background-color: #db3434;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    margin-top: 30px;
+    cursor: pointer;
+}
+
+#button_save {
+    background-color: rgb(74, 202, 74);
+}
+
+#button_delete {
+    background-color: #db3434;
+    margin-left: 127px;
+}
+
+body::before,
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 2px; /* Задаємо ширину рисок (можна змінити за потребою) */
+  background-color: #000; /* Задаємо колір рисок (чорний у цьому прикладі) */
+  z-index: 9999; /* Задаємо зі стеку, щоб риски були поверх іншого контенту */
+}
+
+body::before {
+  left: 65px;
+}
+
+body::after {
+  right: 65px;
 }
